Add instagram links

--- a/about.html
+++ b/about.html
@@ -462,7 +462,7 @@ graphic Designer
                 <div class="ins-inner-box">
                     <img src="images/instagram-img-01.jpg" alt="" />
                     <div class="hov-in">
-                        <a href="#"><i class="fab fa-instagram"></i></a>
+                        <a href="https://www.instagram.com/_t_pie_/?hl=en"><i class="fab fa-instagram"></i></a>
                     </div>
                 </div>
             </div>
@@ -470,7 +470,7 @@ graphic Designer
                 <div class="ins-inner-box">
                     <img src="images/instagram-img-02.jpg" alt="" />
                     <div class="hov-in">
-                        <a href="#"><i class="fab fa-instagram"></i></a>
+                        <a href="https://www.instagram.com/_t_pie_/?hl=en"><i class="fab fa-instagram"></i></a>
                     </div>
                 </div>
             </div>
@@ -478,7 +478,7 @@ graphic Designer
                 <div class="ins-inner-box">
                     <img src="images/instagram-img-03.jpg" alt="" />
                     <div class="hov-in">
-                        <a href="#"><i class="fab fa-instagram"></i></a>
+                        <a href="https://www.instagram.com/_t_pie_/?hl=en"><i class="fab fa-instagram"></i></a>
                     </div>
                 </div>
             </div>
@@ -486,7 +486,7 @@ graphic Designer
                 <div class="ins-inner-box">
                     <img src="images/instagram-img-04.jpg" alt="" />
                     <div class="hov-in">
-                        <a href="#"><i class="fab fa-instagram"></i></a>
+                        <a href="https://www.instagram.com/_t_pie_/?hl=en"><i class="fab fa-instagram"></i></a>
                     </div>
                 </div>
             </div>
@@ -494,7 +494,7 @@ graphic Designer
                 <div class="ins-inner-box">
                     <img src="images/instagram-img-05.jpg" alt="" />
                     <div class="hov-in">
-                        <a href="#"><i class="fab fa-instagram"></i></a>
+                        <a href="https://www.instagram.com/_t_pie_/?hl=en"><i class="fab fa-instagram"></i></a>
                     </div>
                 </div>
             </div>
@@ -502,7 +502,7 @@ graphic Designer
                 <div class="ins-inner-box">
                     <img src="images/instagram-img-06.jpg" alt="" />
                     <div class="hov-in">
-                        <a href="#"><i class="fab fa-instagram"></i></a>
+                        <a href="https://www.instagram.com/_t_pie_/?hl=en"><i class="fab fa-instagram"></i></a>
                     </div>
                 </div>
             </div>
@@ -510,7 +510,7 @@ graphic Designer
                 <div class="ins-inner-box">
                     <img src="images/instagram-img-07.jpg" alt="" />
                     <div class="hov-in">
-                        <a href="#"><i class="fab fa-instagram"></i></a>
+                        <a href="https://www.instagram.com/_t_pie_/?hl=en"><i class="fab fa-instagram"></i></a>
                     </div>
                 </div>
             </div>
@@ -518,7 +518,7 @@ graphic Designer
                 <div class="ins-inner-box">
                     <img src="images/instagram-img-08.jpg" alt="" />
                     <div class="hov-in">
-                        <a href="#"><i class="fab fa-instagram"></i></a>
+                        <a href="https://www.instagram.com/_t_pie_/?hl=en"><i class="fab fa-instagram"></i></a>
                     </div>
                 </div>
             </div>
@@ -526,7 +526,7 @@ graphic Designer
                 <div class="ins-inner-box">
                     <img src="images/instagram-img-09.jpg" alt="" />
                     <div class="hov-in">
-                        <a href="#"><i class="fab fa-instagram"></i></a>
+                        <a href="https://www.instagram.com/_t_pie_/?hl=en"><i class="fab fa-instagram"></i></a>
                     </div>
                 </div>
             </div>
@@ -534,7 +534,7 @@ graphic Designer
                 <div class="ins-inner-box">
                     <img src="images/instagram-img-05.jpg" alt="" />
                     <div class="hov-in">
-                        <a href="#"><i class="fab fa-instagram"></i></a>
+                        <a href="https://www.instagram.com/_t_pie_/?hl=en"><i class="fab fa-instagram"></i></a>
                     </div>
                 </div>
             </div>
