--- a/index.html
+++ b/index.html
@@ -368,7 +368,9 @@
 		</div>
 
        <div class="row special-list">
-		   
+		<div class="col-lg-3 col-md-6  col-6 special-grid best-seller" style="padding-top:20px; padding-bottom:20px;">
+			<img src="img/product/44.jpeg" class="img-fluid" alt="Image">
+		</div>		   
 		<div class="col-lg-3 col-md-6  col-6 special-grid best-seller" style="padding-top:20px; padding-bottom:20px;">
 			<img src="img/product/43.jpeg" class="img-fluid" alt="Image">
 		</div>
@@ -527,12 +529,16 @@
 		</div> 
 		 
 		<div class="col-lg-3 col-md-6 col-6 special-grid best-seller" style="padding-top:20px; padding-bottom:20px;">
-			<img src="img/product/2.jpeg" class="img-fluid" id="myImg" alt="Image">
+			<img src="img/product/2.jpeg" class="img-fluid" alt="Image">
 		</div>    
 		
 		<div class="col-lg-3 col-md-6 col-6 special-grid best-seller" style="padding-top:20px; padding-bottom:20px;">
-			<img src="img/product/1.jpeg" class="img-fluid" id="myImg" alt="Image">
+			<img src="img/product/1.jpeg" class="img-fluid" alt="Image">
+		</div>
+		<div class="col-lg-3 col-md-6 col-6 special-grid best-seller" style="padding-top:20px; padding-bottom:20px;">
+			<img src="img/product/18.jpeg" class="img-fluid" alt="Image">
 		</div>    
+    
 
 		<!-- The Modal -->
 			<div id="myModal" class="modal">
@@ -715,7 +721,7 @@
                 <div class="ins-inner-box">
                     <img src="images/instagram-img-01.jpg" alt="" />
                     <div class="hov-in">
-                        <a href="#"><i class="fab fa-instagram"></i></a>
+                        <a href="https://www.instagram.com/_t_pie_/?hl=en"><i class="fab fa-instagram"></i></a>
                     </div>
                 </div>
             </div>
@@ -723,7 +729,7 @@
                 <div class="ins-inner-box">
                     <img src="images/instagram-img-02.jpg" alt="" />
                     <div class="hov-in">
-                        <a href="#"><i class="fab fa-instagram"></i></a>
+                        <a href="https://www.instagram.com/_t_pie_/?hl=en"><i class="fab fa-instagram"></i></a>
                     </div>
                 </div>
             </div>
@@ -731,7 +737,7 @@
                 <div class="ins-inner-box">
                     <img src="images/instagram-img-03.jpg" alt="" />
                     <div class="hov-in">
-                        <a href="#"><i class="fab fa-instagram"></i></a>
+                        <a href="https://www.instagram.com/_t_pie_/?hl=en"><i class="fab fa-instagram"></i></a>
                     </div>
                 </div>
             </div>
@@ -739,7 +745,7 @@
                 <div class="ins-inner-box">
                     <img src="images/instagram-img-04.jpg" alt="" />
                     <div class="hov-in">
-                        <a href="#"><i class="fab fa-instagram"></i></a>
+                        <a href="https://www.instagram.com/_t_pie_/?hl=en"><i class="fab fa-instagram"></i></a>
                     </div>
                 </div>
             </div>
@@ -747,7 +753,7 @@
                 <div class="ins-inner-box">
                     <img src="images/instagram-img-05.jpg" alt="" />
                     <div class="hov-in">
-                        <a href="#"><i class="fab fa-instagram"></i></a>
+                        <a href="https://www.instagram.com/_t_pie_/?hl=en"><i class="fab fa-instagram"></i></a>
                     </div>
                 </div>
             </div>
@@ -755,7 +761,7 @@
                 <div class="ins-inner-box">
                     <img src="images/instagram-img-06.jpg" alt="" />
                     <div class="hov-in">
-                        <a href="#"><i class="fab fa-instagram"></i></a>
+                        <a href="https://www.instagram.com/_t_pie_/?hl=en"><i class="fab fa-instagram"></i></a>
                     </div>
                 </div>
             </div>
@@ -763,7 +769,7 @@
                 <div class="ins-inner-box">
                     <img src="images/instagram-img-07.jpg" alt="" />
                     <div class="hov-in">
-                        <a href="#"><i class="fab fa-instagram"></i></a>
+                        <a href="https://www.instagram.com/_t_pie_/?hl=en"><i class="fab fa-instagram"></i></a>
                     </div>
                 </div>
             </div>
@@ -771,7 +777,7 @@
                 <div class="ins-inner-box">
                     <img src="images/instagram-img-08.jpg" alt="" />
                     <div class="hov-in">
-                        <a href="#"><i class="fab fa-instagram"></i></a>
+                        <a href="https://www.instagram.com/_t_pie_/?hl=en"><i class="fab fa-instagram"></i></a>
                     </div>
                 </div>
             </div>
@@ -779,7 +785,7 @@
                 <div class="ins-inner-box">
                     <img src="images/instagram-img-09.jpg" alt="" />
                     <div class="hov-in">
-                        <a href="#"><i class="fab fa-instagram"></i></a>
+                        <a href="https://www.instagram.com/_t_pie_/?hl=en"><i class="fab fa-instagram"></i></a>
                     </div>
                 </div>
             </div>
@@ -787,7 +793,7 @@
                 <div class="ins-inner-box">
                     <img src="images/instagram-img-05.jpg" alt="" />
                     <div class="hov-in">
-                        <a href="#"><i class="fab fa-instagram"></i></a>
+                        <a href="https://www.instagram.com/_t_pie_/?hl=en"><i class="fab fa-instagram"></i></a>
                     </div>
                 </div>
             </div>
