--- a/contact-us.html
+++ b/contact-us.html
@@ -354,7 +354,7 @@
                 <div class="ins-inner-box">
                     <img src="images/instagram-img-01.jpg" alt="" />
                     <div class="hov-in">
-                        <a href="#"><i class="fab fa-instagram"></i></a>
+                        <a href="https://www.instagram.com/_t_pie_/?hl=en"><i class="fab fa-instagram"></i></a>
                     </div>
                 </div>
             </div>
@@ -362,7 +362,7 @@
                 <div class="ins-inner-box">
                     <img src="images/instagram-img-02.jpg" alt="" />
                     <div class="hov-in">
-                        <a href="#"><i class="fab fa-instagram"></i></a>
+                        <a href="https://www.instagram.com/_t_pie_/?hl=en"><i class="fab fa-instagram"></i></a>
                     </div>
                 </div>
             </div>
@@ -370,7 +370,7 @@
                 <div class="ins-inner-box">
                     <img src="images/instagram-img-03.jpg" alt="" />
                     <div class="hov-in">
-                        <a href="#"><i class="fab fa-instagram"></i></a>
+                        <a href="https://www.instagram.com/_t_pie_/?hl=en"><i class="fab fa-instagram"></i></a>
                     </div>
                 </div>
             </div>
@@ -378,7 +378,7 @@
                 <div class="ins-inner-box">
                     <img src="images/instagram-img-04.jpg" alt="" />
                     <div class="hov-in">
-                        <a href="#"><i class="fab fa-instagram"></i></a>
+                        <a href="https://www.instagram.com/_t_pie_/?hl=en"><i class="fab fa-instagram"></i></a>
                     </div>
                 </div>
             </div>
@@ -386,7 +386,7 @@
                 <div class="ins-inner-box">
                     <img src="images/instagram-img-05.jpg" alt="" />
                     <div class="hov-in">
-                        <a href="#"><i class="fab fa-instagram"></i></a>
+                        <a href="https://www.instagram.com/_t_pie_/?hl=en"><i class="fab fa-instagram"></i></a>
                     </div>
                 </div>
             </div>
@@ -394,7 +394,7 @@
                 <div class="ins-inner-box">
                     <img src="images/instagram-img-06.jpg" alt="" />
                     <div class="hov-in">
-                        <a href="#"><i class="fab fa-instagram"></i></a>
+                        <a href="https://www.instagram.com/_t_pie_/?hl=en"><i class="fab fa-instagram"></i></a>
                     </div>
                 </div>
             </div>
@@ -402,7 +402,7 @@
                 <div class="ins-inner-box">
                     <img src="images/instagram-img-07.jpg" alt="" />
                     <div class="hov-in">
-                        <a href="#"><i class="fab fa-instagram"></i></a>
+                        <a href="https://www.instagram.com/_t_pie_/?hl=en"><i class="fab fa-instagram"></i></a>
                     </div>
                 </div>
             </div>
@@ -410,7 +410,7 @@
                 <div class="ins-inner-box">
                     <img src="images/instagram-img-08.jpg" alt="" />
                     <div class="hov-in">
-                        <a href="#"><i class="fab fa-instagram"></i></a>
+                        <a href="https://www.instagram.com/_t_pie_/?hl=en"><i class="fab fa-instagram"></i></a>
                     </div>
                 </div>
             </div>
@@ -418,7 +418,7 @@
                 <div class="ins-inner-box">
                     <img src="images/instagram-img-09.jpg" alt="" />
                     <div class="hov-in">
-                        <a href="#"><i class="fab fa-instagram"></i></a>
+                        <a href="https://www.instagram.com/_t_pie_/?hl=en"><i class="fab fa-instagram"></i></a>
                     </div>
                 </div>
             </div>
@@ -426,7 +426,7 @@
                 <div class="ins-inner-box">
                     <img src="images/instagram-img-05.jpg" alt="" />
                     <div class="hov-in">
-                        <a href="#"><i class="fab fa-instagram"></i></a>
+                        <a href="https://www.instagram.com/_t_pie_/?hl=en"><i class="fab fa-instagram"></i></a>
                     </div>
                 </div>
             </div>
