--- a/index.html
+++ b/index.html
@@ -348,7 +348,8 @@
                 <div class="col-lg-12">
                     <div class="title-all text-center">
                         <h1>Our Products</h1>
-                        <p>Have a look at some of our products</p>
+                        <p>Create personalised products and  shop from our designer marketplace
+</p>
                     </div>
                 </div>
             </div>
