--- a/contact-us.html
+++ b/contact-us.html
@@ -19,9 +19,9 @@
 
     <!-- Site Metas -->
     <title>T-PIE</title>
-    <meta name="keywords" content="">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="keywords" content="T-PIE Ajmer">
+    <meta name="description" content="Clothing">
+    <meta name="author" content="| Yogendra | Vishvesh | Abhishek | Vibhanshu |">
 
     <!-- Site Icons -->
     <link rel="shortcut icon" href="img/logo/logo.png" type="image/x-icon">
