--- a/index.html
+++ b/index.html
@@ -349,6 +349,26 @@
                     <div class="title-all text-center">
                         <h1>Our Products</h1>
                         <p>Create personalised products and  shop from our designer marketplace
+				<br>
+				<strong>HOW IT WORKS</strong>
+				<br>
+				                   Create your own shirts and more with  our designing community
+				<br>
+				<em>1)Design with us </em>
+				<br>
+				We've made it super easy to create your personalized shirts by designing together with our designing expertise we discuss blueprints individually in your inbox and let you choose  your perfectly fitted designs.
+<br>
+				<br>
+				                   <strong>  2)Expertly Printed</strong>
+				<br>
+				Once you've designed your shirt you can leave the rest to us. We're experts at our trade and stand behind each and every shirt that leaves your facility
+<br>
+				<br>
+				<strong>3)Delivered crazy fast </strong>
+				You've got too much to do to be worried about your t-shirts. We ship them directly to your door so you can use that time elsewhere. 
+<br>
+				
+
 </p>
                     </div>
                 </div>
