Google Search Console

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 
     <!-- Site Metas -->
     <title>T-PIE</title>
-    <meta name="keywords" content="T-PIE Ajmer">
-    <meta name="description" content="Clothing">
+    <meta name="keywords" content="T PIE Clothing Ajmer">
+    <meta name="description" content="T Pie Clothing Ajmer  ">
     <meta name="author" content="| Yogendra | Vishvesh | Abhishek | Vibhanshu |">
 
     <!-- Site Icons -->
@@ -55,7 +55,7 @@
                         <div id="offer-box" class="carouselTicker">
                             <ul class="offer-box">
                                 <li>
-                                    <i class="fab fa-opencart"></i> 20% Off for Student
+                                 <a href="contact-us.html"><i class="fab fa-opencart"></i> <p style="text-color="white"> Shop Now ! </p></a> 
                                 </li>
                                 <li>
                                     <i class="fab fa-opencart"></i> Amazing quality
@@ -64,7 +64,7 @@
                                     <i class="fab fa-opencart"></i> Custom Designs
 								</li>
                                 <li>
-                                    <a href="" style="color:white"><i class="fab fa-opencart"></i> Shop Now !</a>
+                                <a href=""><i class="fab fa-opencart"></i> 20% Off for Student </a>
                                 </li>
                                 <!--li>
                                     <i class="fab fa-opencart"></i> Off 10%! Shop Now Man
