--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 					</select>
                     </div>
                     <div class="right-phone-box">
-                        <p>Call US :- <a href="tel//7014759453"> +91 7014759453</a></p>
+                        <p>Call US :- <a href="tel://7014759453"> +91 7014759453</a></p>
                     </div>
                     <div class="our-link">
                         <ul>
@@ -115,7 +115,7 @@
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-menu" aria-controls="navbars-rs-food" aria-expanded="false" aria-label="Toggle navigation">
                     <i class="fa fa-bars"></i>
                 </button>
-                    <a class="navbar-brand" href="index.html"><!--img src="img/logo/logo.png" height="64px" width="108.3px" class="logo" alt=""--><b>T-PIE</b></a>
+                    <a class="navbar-brand" href="index.html"><img src="img/logo/logo.png" height="64px" width="108.3px" class="logo" alt=""></a>
                 </div>
                 <!-- End Header Navigation -->
 
