All the footer links activated

--- a/contact-us.html
+++ b/contact-us.html
@@ -114,7 +114,7 @@
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-menu" aria-controls="navbars-rs-food" aria-expanded="false" aria-label="Toggle navigation">
                     <i class="fa fa-bars"></i>
                 </button>
-                    <a class="navbar-brand" href="index.html"><!--img src="img/logo/logo.png" height="64px" width="108.3px" class="logo" alt=""--><b>T-PIE</b></a>
+                    <a class="navbar-brand" href="index.html"><img src="img/logo/logo.png" height="64px" width="108.3px" class="logo" alt=""></a>
                 </div>
                 <!-- End Header Navigation -->
 
@@ -454,13 +454,10 @@ Place your first orders here!
 
                                 </p>
                             <ul>
-                                <li><a href="#"><i class="fab fa-facebook" aria-hidden="true"></i></a></li>
-                                <li><a href="#"><i class="fab fa-twitter" aria-hidden="true"></i></a></li>
-                                <li><a href="#"><i class="fab fa-linkedin" aria-hidden="true"></i></a></li>
-                                <li><a href="#"><i class="fab fa-google-plus" aria-hidden="true"></i></a></li>
-                                <li><a href="#"><i class="fa fa-rss" aria-hidden="true"></i></a></li>
-                                <li><a href="#"><i class="fab fa-pinterest-p" aria-hidden="true"></i></a></li>
-                                <li><a href="#"><i class="fab fa-whatsapp" aria-hidden="true"></i></a></li>
+                                <li><a href="https://www.facebook.com/tpie.pie"><i class="fab fa-facebook" aria-hidden="true"></i></a></li>
+                                <li><a href="https://tpie.club"><i class="fab fa-google-plus" aria-hidden="true"></i></a></li>
+                                <li><a href="https://www.instagram.com/_t_pie_/"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+                                <li><a href="https://wa.me/917014759453?text=I'm%20interested%20in%20buying"><i class="fab fa-whatsapp" aria-hidden="true"></i></a></li>
                             </ul>
                         </div>
                     </div>
@@ -468,12 +465,10 @@ Place your first orders here!
                         <div class="footer-link">
                             <h4>Information</h4>
                             <ul>
-                                <li><a href="#">About Us</a></li>
-                                <li><a href="#">Customer Service</a></li>
-                                <li><a href="#">Our Sitemap</a></li>
-                                <li><a href="#">Terms &amp; Conditions</a></li>
-                                <li><a href="#">Privacy Policy</a></li>
-                                <li><a href="#">Delivery Information</a></li>
+                                <li><a href="about.html">About Us</a></li>
+                                <li><a href="service.html">Customer Service</a></li>
+                                <li><a href="Term & Conditions.pdf" target="_blank" >Terms &amp; Conditions</a></li>
+                                <li><a href="Delivery Information.pdf" target="_blank">Delivery Information</a></li>
                             </ul>
                         </div>
                     </div>
