--- a/index.html
+++ b/index.html
@@ -843,13 +843,10 @@ Place your first orders here!
 
                                 </p>
                             <ul>
-                                <li><a href="#"><i class="fab fa-facebook" aria-hidden="true"></i></a></li>
-                                <li><a href="#"><i class="fab fa-twitter" aria-hidden="true"></i></a></li>
-                                <li><a href="#"><i class="fab fa-linkedin" aria-hidden="true"></i></a></li>
-                                <li><a href="#"><i class="fab fa-google-plus" aria-hidden="true"></i></a></li>
-                                <li><a href="#"><i class="fa fa-rss" aria-hidden="true"></i></a></li>
-                                <li><a href="#"><i class="fab fa-pinterest-p" aria-hidden="true"></i></a></li>
-                                <li><a href="#"><i class="fab fa-whatsapp" aria-hidden="true"></i></a></li>
+                                <li><a href="https://www.facebook.com/tpie.pie"><i class="fab fa-facebook" aria-hidden="true"></i></a></li>
+                                <li><a href="https://tpie.club"><i class="fab fa-google-plus" aria-hidden="true"></i></a></li>
+                                <li><a href="https://www.instagram.com/_t_pie_/"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+                                <li><a href="https://wa.me/917014759453?text=I'm%20interested%20in%20buying"><i class="fab fa-whatsapp" aria-hidden="true"></i></a></li>
                             </ul>
                         </div>
                     </div>
@@ -857,12 +854,10 @@ Place your first orders here!
                         <div class="footer-link">
                             <h4>Information</h4>
                             <ul>
-                                <li><a href="#">About Us</a></li>
-                                <li><a href="#">Customer Service</a></li>
-                                <li><a href="#">Our Sitemap</a></li>
-                                <li><a href="#">Terms &amp; Conditions</a></li>
-                                <li><a href="#">Privacy Policy</a></li>
-                                <li><a href="#">Delivery Information</a></li>
+                                <li><a href="about.html">About Us</a></li>
+                                <li><a href="service.html">Customer Service</a></li>
+                                <li><a href="Term & Conditions.pdf" target="_blank">Terms &amp; Conditions</a></li>
+                                <li><a href="Delivery Information.pdf" target="_blank">Delivery Information</a></li>
                             </ul>
                         </div>
                     </div>
@@ -870,11 +865,11 @@ Place your first orders here!
                         <div class="footer-link-contact">
                             <h4>Contact Us</h4>
                             <ul>
- <li>
+								<li>
                                     <p><i class="fas fa-map-marker-alt"></i>Address:<a href="location">A-302 HBU nagar main Pushkar road Ajmer</a> 
                                 </li>
                                 <li>
-                                    <p><i class="fas fa-phone-square"></i>Phone: <a href="tel:7014759453">7014759453</a></p>
+                                    <p><i class="fas fa-phone-square"></i>Phone: <a href="tel://7014759453">7014759453</a></p>
                                 </li>
                                 <li>
                                     <p><i class="fas fa-envelope"></i>Email: <a href="mailto:tpie170324@gmail.com">tpie170324@gmail.com</a></p>
