--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
                             <h1 class="m-b-20"><strong>T-PIE<br>Clothing</strong></h1>
                             <p class="m-b-40"><p>Wear your own creation
 </p>
-                            <p><a class="btn hvr-hover" href="#">Shop Now</a></p>
+                            <p><a class="btn hvr-hover" href="https://tpie.club/contact-us.html">Shop Now</a></p>
                         </div>
                     </div>
                 </div>
