--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
                         <div class="col-md-12">
                             <h1 class="m-b-20"><strong>Welcome To <br> T-PIE</strong></h1>
                             <p class="m-b-40"></p>
-                            <p><a class="btn hvr-hover" href="#">Shop Now</a></p>
+                            <p><a class="btn hvr-hover" href="https://tpie.club/contact-us.html">Shop Now</a></p>
                         </div>
                     </div>
                 </div>
@@ -276,7 +276,7 @@
                         <div class="col-md-12">
                             <h1 class="m-b-20"><strong>Welcome To <br> T-PIE</strong></h1>
                             <p class="m-b-40"></p>
-                            <p><a class="btn hvr-hover" href="#">Shop Now</a></p>
+                            <p><a class="btn hvr-hover" href="https://tpie.club/contact-us.html">Shop Now</a></p>
                         </div>
                     </div>
                 </div>
