All profile links added

--- a/contact-us.html
+++ b/contact-us.html
@@ -41,6 +41,9 @@
       <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
 
+    <!--Font awesonme icons -->
+    <script src="https://use.fontawesome.com/e93a6decc6.js"></script>
+
 </head>
 
 <body>
