--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
     <link rel="stylesheet" href="css/responsive.css">
     <!-- Custom CSS -->
     <link rel="stylesheet" href="css/custom.css">
+    
+    <!--Font awesonme icons -->
+    <script src="https://use.fontawesome.com/e93a6decc6.js"></script>
 
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
