--- a/index.html
+++ b/index.html
@@ -343,7 +343,121 @@
         </div>
     </div>
     <!-- End Categories -->
+</section>
 
+<section class="section-bg">
+	<div class="container">
+		<div class="col-lg-12">
+				<h1 class="text-center" style="padding-top:40px;margin-left:auto; margin-right:auto; font-size:55px">Flash Sale<br></h1>
+		</div>
+		<div class="row col-lg-12 text-center">
+			
+			<div class="col-xl-3 col-lg-3 col-md-6 col-12 card shadow" style="margin-left:10%; margin-right:10%; padding-bottom:30px;">
+				<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+					<ol class="carousel-indicators">
+						<li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+						<li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+						<li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+					</ol>
+					<div class="carousel-inner">
+							<div class="carousel-item active">
+									<img class="d-block w-100" src="img/product/5.jpeg" alt="First slide">
+									<div class="carousel-caption d-none d-md-block">
+											<h5>Color 1</h5>
+											<p>250Rs</p>
+									</div>
+							</div>
+							<div class="carousel-item">
+									<img class="d-block w-100" src="img/product/3.jpeg" alt="Second slide">
+									<div class="carousel-caption d-none d-md-block">
+											<h5>Color 1</h5>
+											<p>250Rs</p>
+									</div>
+							</div>
+							<div class="carousel-item">
+									<img class="d-block w-100" src="img/product/4.jpeg" alt="Third slide">
+									<div class="carousel-caption d-none d-md-block">
+											<h5>Color 1</h5>
+											<p>250Rs</p>
+									</div>
+							</div>
+					</div>
+					<a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+							<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+							<span class="sr-only">Previous</span>
+					</a>
+					<a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+							<span class="carousel-control-next-icon" aria-hidden="true"></span>
+							<span class="sr-only">Next</span>
+					</a>
+				</div>
+				
+				<h3>Multiple Color Variants<br>
+					For <b>Rs. 350 only</b>
+				</h3>
+				<h3>
+					<a href="#"><img src="images/payment-icon/paytm.png" style="width:40px; height:25px"></a>
+					<a href="#"><img src="images/payment-icon/phonepay.png" style="width:40px; height:25px"></a>
+				</h3>
+			</div>
+			
+			<div class="col-xl-3 col-lg-3 col-md-6 col-12 card shadow" style="margin-left:10%; margin-right:10%;padding-bottom:30px;">
+				<div id="carouselExampleIndicators2" class="carousel slide" data-ride="carousel">
+					<ol class="carousel-indicators">
+						<li data-target="#carouselExampleIndicators2" data-slide-to="0" class="active"></li>
+						<li data-target="#carouselExampleIndicators2" data-slide-to="1"></li>
+						<li data-target="#carouselExampleIndicators2" data-slide-to="2"></li>
+					</ol>
+					<div class="carousel-inner">
+							<div class="carousel-item active">
+									<img class="d-block w-100" src="img/product/6.jpeg" alt="First slide">
+									<div class="carousel-caption d-none d-md-block">
+											<h5>Color 1</h5>
+											<p>250Rs</p>
+									</div>
+							</div>
+							<div class="carousel-item">
+									<img class="d-block w-100" src="img/product/7.jpeg" alt="Second slide">
+									<div class="carousel-caption d-none d-md-block">
+											<h5>Color 1</h5>
+											<p>250Rs</p>
+									</div>
+							</div>
+							<div class="carousel-item">
+									<img class="d-block w-100" src="img/product/8.jpeg" alt="Third slide">
+									<div class="carousel-caption d-none d-md-block">
+											<h5>Color 1</h5>
+											<p>250Rs</p>
+									</div>
+							</div>
+					</div>
+					<a class="carousel-control-prev" href="#carouselExampleIndicators2" role="button" data-slide="prev">
+							<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+							<span class="sr-only">Previous</span>
+					</a>
+					<a class="carousel-control-next" href="#carouselExampleIndicators2" role="button" data-slide="next">
+							<span class="carousel-control-next-icon" aria-hidden="true"></span>
+							<span class="sr-only">Next</span>
+					</a>
+				</div>
+				
+				<h3>Multiple Color Variants<br>
+					For <b>Rs. 350 only</b>
+				</h3>
+				<h3>
+					<a href="#"><img src="images/payment-icon/paytm.png" style="width:40px; height:25px"></a>
+					<a href="#"><img src="images/payment-icon/phonepay.png" style="width:40px; height:25px"></a>
+				</h3>
+			</div>
+			
+			
+			
+		</div>
+		
+	</div>
+</section>
+
+<section>
     <!-- Start Products  -->
     <div class="products-box">
         <div class="container">
