Pages for items added

--- a/about.html
+++ b/about.html
@@ -204,7 +204,7 @@ graphic Designer
                         <div class="team-description">
 				<p><em>Kuldeep Tak</em>
 				<br>
-				“There are three responses to a piece of design- yes,no,and WOW!!! WOW is the one to aim for”</p>
+				“I think the reward for conformity is that everyone likes you except yourself.”</p>
                         </div>
                         <hr class="my-0"> </div>
                 </div>
