--- a/index.html
+++ b/index.html
@@ -273,29 +273,18 @@ title: Home
 		</div>
 		
 	   <div class="row special-list">
-		<div class="col-lg-3 col-md-6 col-6 special-grid best-seller" style="padding-top:20px; padding-bottom:20px;">
-			<img src="./assets/img/product/27.jpeg" class="img-fluid" alt="Image">
-		</div>    
-		
-		<div class="col-lg-3 col-md-6 col-6 special-grid best-seller" style="padding-top:20px; padding-bottom:20px;">
-			<img src="./assets/img/product/26.jpeg" class="img-fluid" alt="Image">
-		</div>   
-		    
-		<div class="col-lg-3 col-md-6 col-6 special-grid best-seller" style="padding-top:20px; padding-bottom:20px;">
-			<img src="./assets/img/product/25.jpeg" class="img-fluid" alt="Image">
-		</div>
-		    
-		<div class="col-lg-3 col-md-6 col-6 special-grid best-seller" style="padding-top:20px; padding-bottom:20px;">
-			<img src="./assets/img/product/24.jpeg" class="img-fluid" alt="Image">
-		</div>    
-		 
-		<div class="col-lg-3 col-md-6 col-6 special-grid best-seller" style="padding-top:20px; padding-bottom:20px;">
-			<img src="./assets/img/product/23.jpeg" class="img-fluid" alt="Image">
-		</div> 
-		 
-		<div class="col-lg-3 col-md-6 col-6 special-grid best-seller" style="padding-top:20px; padding-bottom:20px;">
-			<img src="./assets/img/product/22.jpeg" class="img-fluid" alt="Image">
-		</div>    
+
+            <!-- post for loop starts -->
+            {% assign item = site.categories['item'] | reverse %}
+            {% for post in item %}
+		         <div class="col-lg-3 col-md-6 col-6 special-grid best-seller text-center" style="padding-top:20px; padding-bottom:20px;">
+                    <img src="./assets/img/product/{{post.image}}.jpeg" class="img-fluid" alt="Image"><br>
+                    Rs. {{post.price}} <del>{{post.original_price}}</del><br>
+                    <h3><a href="{{ post.url | absolute_url }}">BUY NOW</a></h3>
+		          </div>    
+            {% endfor %}
+            <!-- post for loop ends -->   
+
 		
 		<div class="col-lg-3 col-md-6 col-6 special-grid best-seller" style="padding-top:20px; padding-bottom:20px;">
 			<img src="./assets/img/product/21.jpeg" class="img-fluid" alt="Image">
