Final Ready for sale

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ title: Home
 				</h3>
 				
 				<h3>
-					<a href="{{ post.url | absolute_url }}">Click here to buy &nbsp;<img src="./assets/images/payment-icon/cart.png" style="width:30px; height:30px;"/></a>
+					<a href="{{ post.url | absolute_url }}" style="color: blue;">Click here to buy &nbsp;<img src="./assets/images/payment-icon/cart.png" style="width:30px; height:30px;"/></a>
 				</h3>
 								
 				<h3>
