Payment method modifies

--- a/payment.html
+++ b/payment.html
@@ -39,7 +39,7 @@ title: Payment
 
                 <div class="col-lg-12 text-center">
                     <h1><b><br>After successfull payment of the respective amount, share the payment recipt and transaction ID and product code below to place your order.</b><br>
-                        <button class="btn"><a href="https://forms.gle/KVDRLF9KmFPeS1Xi8"> Click here </a></button>    
+                        <button class="btn"><a href="https://forms.gle/KVDRLF9KmFPeS1Xi8"> Confirm Order </a></button>    
                         <br><br>
                     </h1>
                 </div>
