--- a/contact-us.html
+++ b/contact-us.html
@@ -17,7 +17,7 @@ title: Contact Us
                                 <p><i class="fas fa-map-marker-alt"></i>Address: A302 HBU Nagar <br>Main Puskar Road<br> Ajmer | 305001 </p>
                             </li>
                             <li>
-                                <p><i class="fas fa-phone-square"></i>Phone: <a href="tel:7014759453">+91 7014753453</a></p>
+                                <p><i class="fas fa-phone-square"></i>Mobile: <a href="tel:7014759453">+91 7014753453</a></p>
                             </li>
                             <li>
                                 <p><i class="fas fa-envelope"></i>Email: <a href="mailto:tpie170324@gmail.com">tpie170324@gmail.com</a></p>
